--- a/app/src/main/res/drawable/background_content_top.xml
+++ b/app/src/main/res/drawable/background_content_top.xml
@@ -2,8 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/white" />
-    <corners android:bottomLeftRadius="@dimen/_32sdp"
-        android:bottomRightRadius="@dimen/_32sdp"></corners>
-
-
+    <corners
+        android:bottomLeftRadius="@dimen/_32sdp"
+        android:bottomRightRadius="@dimen/_32sdp" />
 </shape>
