--- a/app/src/main/res/layout/activity_asksafetyquestion.xml
+++ b/app/src/main/res/layout/activity_asksafetyquestion.xml
@@ -47,7 +47,7 @@
             android:hint="@string/input_a_safety_Answer"
             android:imeOptions="actionNext"
             android:importantForAutofill="no"
-            android:inputType="textEmailAddress"
+            android:inputType="text"
             android:paddingStart="@dimen/_16sdp"
             android:paddingEnd="@dimen/_16sdp"
             android:textColor="@color/primary_text"
