--- a/app/src/main/res/layout/item_container_sent_message.xml
+++ b/app/src/main/res/layout/item_container_sent_message.xml
@@ -19,6 +19,7 @@
         app:layout_constraintWidth_max="wrap"
         android:textColor="@color/white"
         android:textSize="@dimen/_13ssp"
+        android:autoLink="web"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent="0.8" />
