--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -177,8 +177,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end"
         android:layout_marginEnd="@dimen/_16sdp"
-        android:layout_marginBottom="@dimen/_24sdp"
-        android:backgroundTint="@color/primary"
+        android:layout_marginBottom="@dimen/_40sdp"
+        android:backgroundTint="@color/primary_dark"
         android:text="@string/side_menu"
         android:textColor="@color/white"
         app:icon="@drawable/ic_menu"
