--- a/app/src/main/res/drawable/background_sent_message.xml
+++ b/app/src/main/res/drawable/background_sent_message.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/primary"/>
+    <solid android:color="@color/sent_message_background"/>
     <corners
         android:bottomLeftRadius="@dimen/_24sdp"
         android:topLeftRadius="@dimen/_24sdp"
