--- a/app/src/main/res/layout/item_container_received_image.xml
+++ b/app/src/main/res/layout/item_container_received_image.xml
@@ -13,7 +13,7 @@
         android:layout_height="@dimen/_25sdp"
         android:background="@drawable/background_image"
         android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="@id/textMessage"
+        app:layout_constraintBottom_toBottomOf="@id/textImage"
         app:layout_constraintStart_toStartOf="parent"
         app:riv_oval="true" />
 
