--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,8 +10,9 @@
     <color name="icon_background">#20FFFFFF</color>
     <color name="error">#B00020</color>
     <color name="gainsboro">#DCDCDC</color>
-    <color name="received_message_background">#607B8B</color>
-    <color name="sent_message_background">#6495ED</color>
+    <color name="received_message_background">#355C7D</color>
+    <color name="sent_message_background">#C06C84</color>
+
 
 
 </resources>
